# abnf-dmarc-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
dmarcparser/: __init__.py  grammars.py  parser.py  tags.py
tests/: test_dmarc.py
