[project]
name = "dmarcparser"
authors = [{ name = "Anonymmous", email = "ano@nymo.us" }]
license = { text = "Apache-2.0" }
description = "Accurately separates a URL's subdomain, domain, and public suffix, using the Public Suffix List (PSL). By default, this includes the public ICANN TLDs and their exceptions. You can optionally support the Public Suffix List's private domains as well."
keywords = [
    "dmarc",
    "parser",
    "ruf",
    "rua",
    "spf"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.md"

dependencies = [
    "apg-py>=1.0",
    "validators>=0.22"
]

[project.optional-dependencies]
tests = [
    'black',
    'mypy',
    'pytest',
    "pytest-gitignore",
    'tox >= 4.11',
    'ruff >= 0.1'
]

[build-system]
requires = [
    "setuptools>=68.2",
    "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dmarcparser"]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "dmarcparser/_version.py"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

